--- a/style/styles.css
+++ b/style/styles.css
@@ -61,6 +61,56 @@ a{
     color: rgba(233, 90, 8, 1);
 }
 
+/* card section */
+.plant-title{
+    margin-top: 7.5rem;
+    font-weight: 700;
+    font-size: 3.12rem;
+}
+.plant-subtitle{
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+}
+.card{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.3rem;
+}
+.title-section{
+    text-align: center;
+}
+.card-detales{
+    max-width: 270px;
+    height: 485px;
+    text-align: center;
+    box-sizing: border-box;
+}
+.card-detales img{
+    width: 100%;
+    height: 323px;
+}
+.btn{
+    width:100%;
+    height: 50px;
+    background-color: #E95A08;
+    color: #FFFFFF;
+    font-weight: 600px;
+    border: none;
+}
+.flower-name{
+    font-weight: 500px;
+    font-size: 1.3rem;
+    color: #111111;
+    margin-top: 1.8rem;
+    margin-bottom: 0.5rem;
+}
+.flower-price{
+    font-size: 1.35rem;
+    font-weight:700px ;
+    color: #111111;
+    margin-bottom: 1.5rem;
+}
+
 
 
 @media screen and (max-width:425px) {
@@ -72,5 +122,19 @@ a{
     }
     .banner{
         flex-direction: column-reverse;
+        gap: 1.75rem;
+        margin-top: 1.75rem;
     }
+    .banner-left{
+        margin: 1rem;
+    }
+    .banner-description {
+        margin-top: 0.8rem;
+    }
+    .card{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+
 }
