--- a/style/styles.css
+++ b/style/styles.css
@@ -1,10 +1,19 @@
+
+.noto-serif-fronts {
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 *{
     margin: 0rem;
     padding: 0rem;
     box-sizing: border-box;
 }
-
-
+.hide{
+    display: none;
+}
 
 .container{
     max-width: 1140px;
@@ -132,14 +141,14 @@ header a{
     margin-bottom: 25px;
 }
 .Plants-Lover-dscription p{
-    margin-bottom: 30px;
-    font-size: 25px;
+    margin-bottom: 25px;
+    font-size: 22px;
 }
 .Plants-Lover-Section img{
     width: auto;
 }
 .Plants-Lover-Section{
-    margin-bottom: 134px;
+    margin-bottom: 125px;
 }
 .badge{
     width: 286px;
@@ -165,22 +174,34 @@ header a{
     margin-bottom: 1rem;
 }
 .Latest-Deal-subtitle{
+    width: 888px;
+    margin: 0px auto;
+    
     font-weight: 400px;
     font-size: 1.37rem;
 }
-.Latest-Deal-card{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 1.25rem;
-    margin: 7.5rem 0rem;
-    height: 424px;
-    
-}
+
+ .Latest-Deal-card{
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
+ }
+ .left-colum{
+    display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+ }
+ .right-colum{
+    flex: 2;
+ }
 
 .card-1{
-    background-image: url('../assets/deal-bloom.png');
+    height: 206px;
+    flex: 1;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.4)), url('../assets/deal-bloom.png');
     background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 14px;
     display: flex;
     justify-content: center;
@@ -188,8 +209,11 @@ header a{
     flex-direction: column;
 }
 .card-2{
-    background-image: url('../assets/deal-ana.png');
+    height: 206px;
+    flex: 1;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.4)), url('../assets/deal-ana.png');
     background-repeat: no-repeat;
+    background-size: cover;
     grid-column-start: 1;
     grid-row-start: 2;
     border-radius: 14px;
@@ -199,8 +223,11 @@ header a{
     align-items: center;
 }
 .card-3{
-    background-image: url('../assets/deal-zabo.png');
+    height: 206px;
+    flex: 1;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.4)), url('../assets/deal-zabo.png');
     background-repeat: no-repeat;
+    background-size: cover;
     grid-column: span 2 / span 2;
     grid-row: span 2 / span 2;
     grid-column-start: 2;
@@ -235,10 +262,12 @@ header a{
 
 /* Join Section */
 .Join-Section{
+    margin-top: 50px;
     height: 533px;
     display: flex;
     align-items: center;
     background-image: url('../assets/news-letter-bg.png');
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .Join-Section img{
@@ -325,6 +354,8 @@ footer a{
     .card{
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    margin-left: 17px;
+    margin-right: 17px;
 }
 .Plants-Lover-Section{
     flex-direction: column;
@@ -335,8 +366,82 @@ footer a{
 .Plants-Lover-dscription{
     width: 100%;
 }
+.badge{
+    display: none;
+}
+.plant-title{
+    margin-top: 60px;
+}
+.title-section{
+    margin-left: 18px;
+    margin-right: 18px;
+}
+.Plants-Lover-Section{
+    margin-left: 17px;
+    margin-right: 17px;
+}
+.Plants-Lover-dscription{
+    margin-left: 20px;
+    height: 650px;
+}
+.Latest-Deal-Section{
+    margin-top: 30px;
+}
+.Latest-Deal-detals{
+    margin-left: 17px;
+    margin-right: 17px;
+}
+.Latest-Deal-subtitle{
+    width: 336px;
+    margin: 0px auto;
+    font-weight: 400px;
+    font-size: 1.37rem;
+}
+.Latest-Deal-card{
+    flex-direction: column;
+    padding: 1rem;
+  }
 
+.card-1 {
+    flex: none;
+}
+.card-2{
+    flex: none;
+    border-radius:0rem;
+}
+.Join-Section{
+    margin-top: 30px;
+    width: 100%;
+    height: 270px;
+}
+.parent-Bunch{
+       width: 321px;
+       height: 100px;
+}
+.colorful-Bunch input{
+    border: none;
+    padding: 1rem ;
+    width: 218px;
+    height: 50px;
+}
+.btn2{
+    width: 130px;
+}
+.parent-Bunch-title{
+    font-weight: 700px;
+    font-size: 20px;
+}
+.Join-Section img{
+    width: 393px;
+}
 
-
+.footer-parent{
+    display: grid;
+    grid-template-columns:repeat(1 ,1fr);
+    margin-left: 17px;
+    margin-right: 17px;
+    margin-bottom: 20px;
+    gap: 0px;
+}
 
 }
